Added swagger documentation of newViaggio and searchViaggio
